nginx/Deployment.yml
apiVersion: apps/v1
kind: Deployment  
metadata: 
  name: nginx
  namespace: nginx
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-D-pod
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi    
          volumeMounts: 
          - mountPath: /var/www/html/
            name: myvolume
      volumes:
        - name: myvolume
          persistentVolumeClaim:
            claimName: local-pvc
